feat: add CreatePayIn merchant handler
