# internal/delivery/http/dto/banking/request/create_bank_detail.go
@@ -20,4 +20,6 @@ type CreateBankDetailRequest struct {
 	MaxQuantityDay			int32		`json:"max_quantity_day"`
 	MaxQuantityMonth 		int32		`json:"max_quantity_month"`
 	DeviceID				string		`json:"device_id"`
+	BankCode 				string 		`json:"bank_code"`
+	NspkCode				string 		`json:"nspk_code"`
 }
